# CasioEmuAndroid

./: .gitignore  .gitmodules  gradle.properties  local.properties
app/jni/src/: Android.mk  Binary.h  CMakeLists.txt  CasioEmuMsvc.vcxproj  CasioEmuMsvc.vcxproj.filters  Config.hpp  Emulator.cpp  Emulator.hpp  Game.cpp  Gui.h  ModelInfo.h  Models.h  Romu.cpp  Romu.h  U8Disas.cpp  U8Disas.h  casioemu.cpp  packages.config  stringhelper.h  vibration.cpp  vibration.h
app/jni/src/Assemblier/: U8Emitter.h
app/jni/src/Chipset/: CPU.cpp  CPU.hpp  CPUArithmetic.cpp  CPUControl.cpp  CPULoadStore.cpp  CPUPushPop.cpp  Chipset.cpp  Chipset.hpp  InterruptSource.cpp  InterruptSource.hpp  MMU.cpp  MMU.hpp  MMURegion.cpp  MMURegion.hpp
app/jni/src/Containers/: ConcurrentObject.h
app/jni/src/CrashHandler/: CrashHandler.cpp
app/jni/src/Ext/: 3rd_licenses.h  GameBuffer.cpp  GameBuffer.h  LabelFile.h  Logger.cpp  Logger.hpp  RomPackage.h  Romu.cpp  Romu.h  SysDialog.cpp  SysDialog.h  U8Disas.cpp  U8Disas.h  vibration.cpp  vibration.h
app/jni/src/Gui/: 5800FileSystem.cpp  AddressWindow.cpp  AddressWindow.h  Assemblier.cpp  Assemblier.h  BitmapViewer.cpp  BitmapViewer.h  CallAnalysis.cpp  CasioData.cpp  CasioData.h  CodeViewer.cpp  CodeViewer.hpp  CwiiHelp.h  Editors.cpp  Editors.h  FileDialog.cpp  FileDialog.hpp  Gui.cpp  Gui.h  Hooks.cpp  Hooks.h  HwController.cpp  HwController.h  Injector.cpp  Injector.hpp  LabelViewer.cpp  LabelViewer.h  Localization.cpp  Localization.h  MemBreakPoint.cpp  MemBreakPoint.hpp  PopUpDisplay.h  Theme.cpp  Theme.h  UIScaling.cpp  UIScaling.h  UIScalling.cpp  Ui.cpp  Ui.hpp  VariableWindow.cpp  (+5 more)
app/jni/src/Gui/imgui/: imconfig.h  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp  imgui_tables.cpp  imgui_widgets.cpp
app/jni/src/Peripheral/: 5800Flash.cpp  5800Flash.h  Audio.cpp  Audio.h  BCDCalc.cpp  BCDCalc.hpp  BatteryBackedRAM.cpp  BatteryBackedRAM.hpp  ExternalInterrupts.cpp  ExternalInterrupts.hpp  Flash.cpp  Flash.hpp  IOPorts.cpp  IOPorts.hpp  Keyboard.cpp  Keyboard.hpp  Miscellaneous.cpp  Miscellaneous.hpp  Peripheral.hpp  PowerSupply.cpp  PowerSupply.hpp  ROMWindow.cpp  ROMWindow.hpp  RealTimeClock.cpp  RealTimeClock.hpp  Screen.cpp  Screen.hpp  Spi.cpp  Spi.h  StandbyControl.cpp  StandbyControl.hpp  Timer.cpp  Timer.hpp  TimerBaseCounter.cpp  TimerBaseCounter.hpp  WatchdogTimer.cpp  WatchdogTimer.hpp
app/jni/src/Peripheral/SD/: FakeSdCard.h
app/jni/src/Plugin/: PluginApi.h  PluginApi_Impl.cpp  PluginMan.cpp  PluginMan.h
app/jni/src/StartupUi/: Editor.cpp  StartupUi.cpp  StartupUi.h
app/jni/src/locales/: en_US.lc  lang.h  vi_VN.lc  vn.lc  zh_CN.lc
(+42 files in other folders)
